--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -292,6 +292,7 @@
     <ClCompile Include="SourceCode\gamesystem\character\FirstBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\Food.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\Ghost.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\character\HungerGauge.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\InterBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\InterEnemy.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\NormalEnemy.cpp" />
@@ -392,6 +393,7 @@
     <ClInclude Include="SourceCode\gamesystem\character\FirstBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\Food.h" />
     <ClInclude Include="SourceCode\gamesystem\character\Ghost.h" />
+    <ClInclude Include="SourceCode\gamesystem\character\HungerGauge.h" />
     <ClInclude Include="SourceCode\gamesystem\character\InterBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\InterEnemy.h" />
     <ClInclude Include="SourceCode\gamesystem\character\NormalEnemy.h" />
