--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -339,6 +339,9 @@
     <ClCompile Include="SourceCode\gamesystem\character\HungerGauge.cpp">
       <Filter>SourceCords\gamesystem\character\Various\HungerGauge</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\scene\SceneChanger.cpp">
+      <Filter>SourceCords\gamesystem\Scene\Base</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -635,6 +638,9 @@
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\character\HungerGauge.h">
       <Filter>SourceCords\gamesystem\character\Various\HungerGauge</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\scene\SceneChanger.h">
+      <Filter>SourceCords\gamesystem\Scene\Base</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
