弾の基底クラス作成。派生クラスとして言霊クラスと攻撃弾クラスを作成した。

--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -286,13 +286,15 @@
     <ClCompile Include="SourceCode\gamesystem\actor\PlaySceneActor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\actor\TitleSceneActor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\backobj\BackObj.cpp" />
-    <ClCompile Include="SourceCode\gamesystem\character\Bullet.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\character\AttackBullet.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\character\GhostBullet.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\EnemyManager.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\FirstBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\Food.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\Ghost.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\HungerGauge.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\InterBoss.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\character\InterBullet.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\InterEnemy.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\NormalEnemy.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\Player.cpp" />
@@ -384,13 +386,15 @@
     <ClInclude Include="SourceCode\gamesystem\actor\PlaySceneActor.h" />
     <ClInclude Include="SourceCode\gamesystem\actor\TitleSceneActor.h" />
     <ClInclude Include="SourceCode\gamesystem\backobj\BackObj.h" />
-    <ClInclude Include="SourceCode\gamesystem\character\Bullet.h" />
+    <ClInclude Include="SourceCode\gamesystem\character\AttackBullet.h" />
+    <ClInclude Include="SourceCode\gamesystem\character\GhostBullet.h" />
     <ClInclude Include="SourceCode\gamesystem\character\EnemyManager.h" />
     <ClInclude Include="SourceCode\gamesystem\character\FirstBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\Food.h" />
     <ClInclude Include="SourceCode\gamesystem\character\Ghost.h" />
     <ClInclude Include="SourceCode\gamesystem\character\HungerGauge.h" />
     <ClInclude Include="SourceCode\gamesystem\character\InterBoss.h" />
+    <ClInclude Include="SourceCode\gamesystem\character\InterBullet.h" />
     <ClInclude Include="SourceCode\gamesystem\character\InterEnemy.h" />
     <ClInclude Include="SourceCode\gamesystem\character\NormalEnemy.h" />
     <ClInclude Include="SourceCode\gamesystem\character\Player.h" />
