バグ直し、食料クラスの呼び出しとゴーストクラスの呼び出しをまとめた

--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -300,9 +300,8 @@
     <ClCompile Include="SourceCode\gamesystem\character\Player.cpp" />
     <ClCompile Include="SourceCode\gamesystem\editor\Editor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\editor\LoadBox.cpp" />
-    <ClCompile Include="SourceCode\gamesystem\editor\LoadFood.cpp" />
-    <ClCompile Include="SourceCode\gamesystem\editor\LoadGhost.cpp" />
     <ClCompile Include="SourceCode\gamesystem\editor\LoadManager.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\editor\LoadStageObj.cpp" />
     <ClCompile Include="SourceCode\gamesystem\gamecamera\CameraWork.cpp" />
     <ClCompile Include="SourceCode\gamesystem\ParticleManager\ParticleEmitter.cpp" />
     <ClCompile Include="SourceCode\gamesystem\ParticleManager\ParticleManager.cpp" />
@@ -400,9 +399,8 @@
     <ClInclude Include="SourceCode\gamesystem\character\Player.h" />
     <ClInclude Include="SourceCode\gamesystem\editor\Editor.h" />
     <ClInclude Include="SourceCode\gamesystem\editor\LoadBox.h" />
-    <ClInclude Include="SourceCode\gamesystem\editor\LoadFood.h" />
-    <ClInclude Include="SourceCode\gamesystem\editor\LoadGhost.h" />
     <ClInclude Include="SourceCode\gamesystem\editor\LoadManager.h" />
+    <ClInclude Include="SourceCode\gamesystem\editor\LoadStageObj.h" />
     <ClInclude Include="SourceCode\gamesystem\gamecamera\CameraWork.h" />
     <ClInclude Include="SourceCode\gamesystem\ParticleManager\ParticleEmitter.h" />
     <ClInclude Include="SourceCode\gamesystem\ParticleManager\ParticleManager.h" />
