--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -312,14 +312,8 @@
     <ClCompile Include="SourceCode\gamesystem\scene\PlaceBox.cpp">
       <Filter>SourceCords\gamesystem\Editor\Box</Filter>
     </ClCompile>
-    <ClCompile Include="SourceCode\gamesystem\editor\LoadFood.cpp">
-      <Filter>SourceCords\gamesystem\Editor\Load\Food</Filter>
-    </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\character\Ghost.cpp">
       <Filter>SourceCords\gamesystem\character\Various\Ghost</Filter>
-    </ClCompile>
-    <ClCompile Include="SourceCode\gamesystem\editor\LoadGhost.cpp">
-      <Filter>SourceCords\gamesystem\Editor\Load\Ghost</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\editor\Editor.cpp">
       <Filter>SourceCords\gamesystem\Editor</Filter>
@@ -335,6 +329,9 @@
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\character\InterBullet.cpp">
       <Filter>SourceCords\gamesystem\character\Various\Bullet\Base</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\editor\LoadStageObj.cpp">
+      <Filter>SourceCords\gamesystem\Editor\Load\StageObj</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -603,14 +600,8 @@
     <ClInclude Include="SourceCode\engine\helper\VariableCommon.h">
       <Filter>SourceCords\gamesystem\Common</Filter>
     </ClInclude>
-    <ClInclude Include="SourceCode\gamesystem\editor\LoadFood.h">
-      <Filter>SourceCords\gamesystem\Editor\Load\Food</Filter>
-    </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\character\Ghost.h">
       <Filter>SourceCords\gamesystem\character\Various\Ghost</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\gamesystem\editor\LoadGhost.h">
-      <Filter>SourceCords\gamesystem\Editor\Load\Ghost</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\editor\Editor.h">
       <Filter>SourceCords\gamesystem\Editor</Filter>
@@ -629,6 +620,9 @@
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\character\InterBullet.h">
       <Filter>SourceCords\gamesystem\character\Various\Bullet\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\editor\LoadStageObj.h">
+      <Filter>SourceCords\gamesystem\Editor\Load\StageObj</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -871,12 +865,6 @@
     <Filter Include="SourceCords\gamesystem\character\Various\Ghost">
       <UniqueIdentifier>{bb2631e7-4d39-4aef-af87-4bbdd5fdd43b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="SourceCords\gamesystem\Editor\Load\Food">
-      <UniqueIdentifier>{0671f28d-68da-431f-a943-f42ae6505ab9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="SourceCords\gamesystem\Editor\Load\Ghost">
-      <UniqueIdentifier>{e2b34f10-2860-4897-ab0d-a8ea18a57829}</UniqueIdentifier>
-    </Filter>
     <Filter Include="SourceCords\gamesystem\character\Various\HungerGauge">
       <UniqueIdentifier>{fab9938a-fb4a-463c-95fa-d970e1f917e8}</UniqueIdentifier>
     </Filter>
@@ -885,6 +873,9 @@
     </Filter>
     <Filter Include="SourceCords\gamesystem\character\Various\Bullet\Various">
       <UniqueIdentifier>{2fa70ba3-447a-4d5e-9a24-c47a2e0f7c2c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceCords\gamesystem\Editor\Load\StageObj">
+      <UniqueIdentifier>{952d0f7f-df11-42dd-a187-f6112a1d8b5d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
