--- a/imgui.ini
+++ b/imgui.ini
@@ -64,7 +64,7 @@ Size=385,156
 Collapsed=0
 
 [Window][Food]
-Pos=60,60
+Pos=339,-9
 Size=270,314
 Collapsed=0
 
@@ -75,7 +75,7 @@ Collapsed=0
 
 [Window][Ghost]
 Pos=0,3
-Size=128,201
+Size=160,360
 Collapsed=0
 
 [Window][b]
