--- a/.gitattributes
+++ b/.gitattributes
@@ -59,3 +59,4 @@
 #*.RTF   diff=astextplain
 *.lib filter=lfs diff=lfs merge=lfs -text
 *.fbx filter=lfs diff=lfs merge=lfs -text
+*.wav filter=lfs diff=lfs merge=lfs -text
