ボスのHPセットと攻撃の弾とボスの当たり判定追加

--- a/imgui.ini
+++ b/imgui.ini
@@ -83,3 +83,13 @@ Pos=60,60
 Size=37,48
 Collapsed=0
 
+[Window][First]
+Pos=60,60
+Size=100,48
+Collapsed=0
+
+[Window][Second]
+Pos=60,60
+Size=100,48
+Collapsed=0
+
