--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -209,6 +209,7 @@
     <ClCompile Include="SourceCode\gamesystem\ui\UI.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="SourceCode\engine\2d\DebugText.h" />
     <ClInclude Include="SourceCode\engine\2d\Font.h" />
     <ClInclude Include="SourceCode\engine\2d\IKESprite.h" />
