ボスのインターバル動作(仮)とスタンプ実装

--- a/imgui.ini
+++ b/imgui.ini
@@ -90,6 +90,16 @@ Collapsed=0
 
 [Window][Second]
 Pos=60,60
-Size=100,48
+Size=155,123
+Collapsed=0
+
+[Window][Anger]
+Pos=224,200
+Size=194,179
+Collapsed=0
+
+[Window][Joy]
+Pos=60,60
+Size=190,149
 Collapsed=0
 
