--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -232,6 +232,18 @@
     <Filter Include="SourceCords\shader\3d\fbx">
       <UniqueIdentifier>{1340815c-ee78-4140-ba53-dbae14afda5d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="SourceCords\gamesystem\character\Boss\Attach">
+      <UniqueIdentifier>{4bbf7cee-5cb7-45f0-abcf-10a97f4f28d1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceCords\gamesystem\character\Boss\Attach\Stamp">
+      <UniqueIdentifier>{dc0d5067-c5c6-478c-a4f4-227349b70656}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceCords\gamesystem\character\Boss\Attach\Stamp\Common">
+      <UniqueIdentifier>{586d10a6-9f50-4765-a31b-167c925d78fa}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceCords\gamesystem\character\Boss\Attach\Stamp\Various">
+      <UniqueIdentifier>{056d0a58-0192-484e-a97b-c2d4ea01b954}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SourceCode\engine\2d\DebugText.cpp">
@@ -527,6 +539,15 @@
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\actor\GameOverSceneActor.cpp">
       <Filter>SourceCords\gamesystem\actor\GameOver</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\bossattach\InterStamp.cpp">
+      <Filter>SourceCords\gamesystem\character\Boss\Attach\Stamp\Common</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\bossattach\AngerStamp.cpp">
+      <Filter>SourceCords\gamesystem\character\Boss\Attach\Stamp\Various</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\bossattach\JoyStamp.cpp">
+      <Filter>SourceCords\gamesystem\character\Boss\Attach\Stamp\Various</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -844,6 +865,15 @@
     </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>SourceCords</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\bossattach\InterStamp.h">
+      <Filter>SourceCords\gamesystem\character\Boss\Attach\Stamp\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\bossattach\AngerStamp.h">
+      <Filter>SourceCords\gamesystem\character\Boss\Attach\Stamp\Various</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\bossattach\JoyStamp.h">
+      <Filter>SourceCords\gamesystem\character\Boss\Attach\Stamp\Various</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
