--- a/imgui.ini
+++ b/imgui.ini
@@ -54,7 +54,7 @@ Size=116,239
 Collapsed=0
 
 [Window][Player]
-Pos=68,80
+Pos=47,227
 Size=134,221
 Collapsed=0
 
@@ -69,7 +69,7 @@ Size=70,224
 Collapsed=0
 
 [Window][Hunger]
-Pos=705,174
+Pos=933,413
 Size=233,177
 Collapsed=0
 
@@ -89,7 +89,7 @@ Size=100,48
 Collapsed=0
 
 [Window][Second]
-Pos=60,60
+Pos=216,382
 Size=155,123
 Collapsed=0
 
@@ -101,5 +101,10 @@ Collapsed=0
 [Window][Joy]
 Pos=60,60
 Size=190,149
+Collapsed=0
+
+[Window][ShockWave]
+Pos=60,60
+Size=32,48
 Collapsed=0
 
