ランダム攻撃

--- a/imgui.ini
+++ b/imgui.ini
@@ -104,7 +104,12 @@ Size=190,149
 Collapsed=0
 
 [Window][ShockWave]
+Pos=27,393
+Size=102,118
+Collapsed=0
+
+[Window][Predict]
 Pos=60,60
-Size=32,48
+Size=310,212
 Collapsed=0
 
