--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -253,6 +253,9 @@
     <Filter Include="SourceCords\gamesystem\character\Boss\Attach\ShockWave">
       <UniqueIdentifier>{77d10199-6335-4155-991e-4275039f7df2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="SourceCords\gamesystem\character\Boss\Attach\Predict">
+      <UniqueIdentifier>{be52123a-913f-41f2-9e7a-bab117cec069}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SourceCode\engine\2d\DebugText.cpp">
@@ -566,6 +569,9 @@
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\bossattach\ShockWave.cpp">
       <Filter>SourceCords\gamesystem\character\Boss\Attach\ShockWave</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\bossattach\Predict.cpp">
+      <Filter>SourceCords\gamesystem\character\Boss\Attach\Predict</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -901,6 +907,9 @@
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\bossattach\ShockWave.h">
       <Filter>SourceCords\gamesystem\character\Boss\Attach\ShockWave</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\bossattach\Predict.h">
+      <Filter>SourceCords\gamesystem\character\Boss\Attach\Predict</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
