敵が沢山すぽーんするまでのチュートリアル制作

--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -188,6 +188,7 @@
     <ClCompile Include="SourceCode\gamesystem\character\NormalEnemy.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\Player.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\SecondBoss.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\character\TutorialEnemy.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\ViewBullet.cpp" />
     <ClCompile Include="SourceCode\gamesystem\editor\Editor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\editor\LoadBox.cpp" />
@@ -301,6 +302,7 @@
     <ClInclude Include="SourceCode\gamesystem\character\NormalEnemy.h" />
     <ClInclude Include="SourceCode\gamesystem\character\Player.h" />
     <ClInclude Include="SourceCode\gamesystem\character\SecondBoss.h" />
+    <ClInclude Include="SourceCode\gamesystem\character\TutorialEnemy.h" />
     <ClInclude Include="SourceCode\gamesystem\character\ViewBullet.h" />
     <ClInclude Include="SourceCode\gamesystem\editor\Editor.h" />
     <ClInclude Include="SourceCode\gamesystem\editor\LoadBox.h" />
