--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -567,6 +567,9 @@
     <ClCompile Include="SourceCode\gamesystem\bossattach\ShockWave.cpp">
       <Filter>SourceCords\gamesystem\character\Boss\Attach\ShockWave</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\character\TutorialEnemy.cpp">
+      <Filter>SourceCords\gamesystem\character\Enemy\Various</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCode\engine\2d\DebugText.h">
@@ -901,6 +904,9 @@
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\bossattach\ShockWave.h">
       <Filter>SourceCords\gamesystem\character\Boss\Attach\ShockWave</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\character\TutorialEnemy.h">
+      <Filter>SourceCords\gamesystem\character\Enemy\Various</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
