--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -575,7 +575,7 @@
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\character\PlayerAttach.cpp">
       <Filter>SourceCords\gamesystem\character\Player</Filter>
-   </ClCompile>
+    </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\character\TutorialEnemy.cpp">
       <Filter>SourceCords\gamesystem\character\Enemy\Various</Filter>
     </ClCompile>
@@ -919,6 +919,9 @@
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\character\PlayerAttach.h">
       <Filter>SourceCords\gamesystem\character\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\character\TutorialEnemy.h">
+      <Filter>SourceCords\gamesystem\character\Enemy\Various</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
