--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -256,6 +256,15 @@
     <Filter Include="SourceCords\gamesystem\character\Boss\Various\Second">
       <UniqueIdentifier>{4ed8194f-082d-4483-a773-112e636385cd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="SourceCords\gamesystem\Effect">
+      <UniqueIdentifier>{0102f901-94c1-4773-8bd6-9d50eaecf832}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceCords\gamesystem\Effect\Common">
+      <UniqueIdentifier>{e8daea4f-b844-4f70-a47c-d5a49b236dce}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceCords\gamesystem\Effect\Various">
+      <UniqueIdentifier>{bc65e71a-f980-487d-8807-0337c3ab1b9c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SourceCode\engine\2d\DebugText.cpp">
@@ -578,6 +587,12 @@
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\character\TutorialEnemy.cpp">
       <Filter>SourceCords\gamesystem\character\Enemy\Various</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\effect\InterEffect.cpp">
+      <Filter>SourceCords\gamesystem\Effect\Common</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\effect\BreakEffect.cpp">
+      <Filter>SourceCords\gamesystem\Effect\Various</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -922,6 +937,12 @@
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\character\TutorialEnemy.h">
       <Filter>SourceCords\gamesystem\character\Enemy\Various</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\effect\InterEffect.h">
+      <Filter>SourceCords\gamesystem\Effect\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\effect\BreakEffect.h">
+      <Filter>SourceCords\gamesystem\Effect\Various</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
