--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -256,6 +256,9 @@
     <Filter Include="SourceCords\gamesystem\character\Boss\Attach\Predict">
       <UniqueIdentifier>{be52123a-913f-41f2-9e7a-bab117cec069}</UniqueIdentifier>
     </Filter>
+    <Filter Include="SourceCords\engine\2d\Feed">
+      <UniqueIdentifier>{3a045a8d-81b7-4858-b3d1-bf5b586a9031}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SourceCode\engine\2d\DebugText.cpp">
@@ -578,6 +581,9 @@
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\character\TutorialEnemy.cpp">
       <Filter>SourceCords\gamesystem\character\Enemy\Various</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\engine\2d\Feed.cpp">
+      <Filter>SourceCords\engine\2d\Feed</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -922,6 +928,9 @@
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\character\TutorialEnemy.h">
       <Filter>SourceCords\gamesystem\character\Enemy\Various</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\engine\2d\Feed.h">
+      <Filter>SourceCords\engine\2d\Feed</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
